fixed ORCID layout bugs

--- a/save/webpages/css/openagrar.css
+++ b/save/webpages/css/openagrar.css
@@ -389,3 +389,9 @@ li[data-fq="mods.refereed:n/a"]  {
 }
 
 
+/**** FIXME: remove in LTS2019, already fixed there *********/
+div.orcid-status, div.orcid-publish {
+  display: block;
+}
+
+
